[FIX] web: increase z-index of form view statusbar
Steps to reproduce:

1. Open the To-Do/Project app
2. Focus on HTML field and add some empty lines to make it scrollable.
3. Scroll the view and observe that the power buttons scroll above the status
bar.

Before this commit:

A recent commit [1] made the form view statusbar sticky with a z-index of 1,
which conflicts with the editor's local overlay.

After this commit:

The z-index of the statusbar is increased, ensuring the editor's local
overlay scrolls beneath the statusbar.

[1]: a3c63413825cf3492a10ade77a2c571c4eeb33a6

task: 4457597

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -323,7 +323,7 @@
         @include media-breakpoint-up(md) {
             position: sticky;
             top: 0;
-            z-index: 1;
+            z-index: $zindex-modal + 1;
 
             &:not(.modal .o_form_statusbar) {
                 background-color: $body-bg;
